[tool.poetry]
name = "mokr"
version = "0.1.2"
description = "Remote web browser automation."
authors = ["Michael Everingham <36551116+michaeleveringham@users.noreply.github.com>"]
readme = "README.md"
include = ["*.js", "*.json"]
packages = [{include = "mokr", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pyee = "^11.1.0"
websockets = "^12.0"
requests = "^2.31.0"
tqdm = "^4.66.2"
httpx = {extras = ["http2", "socks"], version = "^0.27.0"}
geckordp = "^0.4.53"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-autoapi = "^3.0.0"
myst-parser = "^2.0.0"
sphinxnotes-comboroles = "^1.0.0b0"

[tool.poetry.group.test.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.2"

[tool.poetry.scripts]
mokr = "mokr.console:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
