[project]
name = "mokr"
version = "0.2.0"
description = "Remote web browser automation."
authors = [{name = "Michael Everingham", email = "36551116+michaeleveringham@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyee>=11.1.0",
    "websockets>=12.0",
    "requests>=2.31.0",
    "tqdm>=4.66.2",
    "httpx[http2,socks]>=0.27.0",
    "geckordp>=0.4.53",
    "pytest-asyncio>=1.2.0",
]

[project.scripts]
mokr = "mokr.console:main"

[dependency-groups]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autoapi>=3.0.0",
    "myst-parser>=2.0.0",
    "sphinxnotes-comboroles>=1.0.0b0",
]
test = [
    "black>=23.0.0",
    "pytest>=8.0.2",
]

[tool.black]
line-length = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
